[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true

[package]
authors = ["ElCodigoDominicano"]
name = "portscanner"
version = "0.1.0"
edition = "2021"
description = "a small, blazingly fast,  basic, and 'noisy' network port scanner"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
